--- a/ml/notebooks/train.ipynb
+++ b/ml/notebooks/train.ipynb
@@ -16,23 +16,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0080/positive/0', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0080/positive/1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "g_cfg_fn   = \"../config/global.yaml\"\n",
+    "c_cfg_fn   = \"../config/fcnet_svd_mr.yaml\"\n",
+    "\n",
+    "global_config = io.load_yaml(g_cfg_fn)\n",
+    "#case_config   = io.load_yaml(c_cfg_fn)\n",
+    "\n",
+    "FILES         = io.read_lines(global_config['FILES'])\n",
+    "print(FILES[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "g_cfg_fn   = \"./config/global.yaml\"\n",
-    "c_cfg_fn   = \"./config/fcnet_svd_mr.yaml\"\n",
-    "\n",
-    "global_config = load_yaml(g_cfg_fn)\n",
-    "case_config   = load_yaml(c_cfg_fn)\n",
-    "\n",
-    "FILES         = read_lines(case_config['FILE_LIST'])\n",
-    "print(FILES[:2])\n",
-    "\n",
-    "train_id_list = [i for i in FILES if any([c in i for c in case_config['TRAIN_PATTERNS']])]\n",
-    "val_id_list   = [i for i in FILES if any([c in i for c in case_config['VAL_PATTERNS']])]\n",
-    "test_id_list  = [i for i in FILES if any([c in i for c in case_config['TEST_PATTERNS']])]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
