--- a/ml/notebooks/train.ipynb
+++ b/ml/notebooks/train.ipynb
@@ -15,7 +15,8 @@
     "from tqdm import tqdm\n",
     "\n",
     "from modules import io\n",
-    "from modules import vascular_data as sv"
+    "from modules import vascular_data as sv\n",
+    "from modules.data import get_data"
    ]
   },
   {
@@ -48,14 +49,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_pos_list = [i for i in FILES if \"positive\" in i and any([c in i for c in case_config['TRAIN_PATTERNS']])]\n",
-    "train_neg_list = [i for i in FILES if \"negative\" in i and any([c in i for c in case_config['TRAIN_PATTERNS']])]\n",
+    "train_pos_list = [i+'.x.npy' for i in FILES if \"positive\" in i and any([c in i for c in case_config['TRAIN_PATTERNS']])]\n",
+    "train_neg_list = [i+'.x.npy' for i in FILES if \"negative\" in i and any([c in i for c in case_config['TRAIN_PATTERNS']])]\n",
     "\n",
-    "val_pos_list = [i for i in FILES if \"positive\" in i and any([c in i for c in case_config['VAL_PATTERNS']])]\n",
-    "val_neg_list = [i for i in FILES if \"negative\" in i and any([c in i for c in case_config['VAL_PATTERNS']])]\n",
+    "val_pos_list = [i+'.x.npy' for i in FILES if \"positive\" in i and any([c in i for c in case_config['VAL_PATTERNS']])]\n",
+    "val_neg_list = [i+'.x.npy' for i in FILES if \"negative\" in i and any([c in i for c in case_config['VAL_PATTERNS']])]\n",
     "\n",
-    "test_pos_list = [i for i in FILES if \"positive\" in i and any([c in i for c in case_config['TEST_PATTERNS']])]\n",
-    "test_neg_list = [i for i in FILES if \"negative\" in i and any([c in i for c in case_config['TEST_PATTERNS']])]\n"
+    "test_pos_list = [i+'.x.npy' for i in FILES if \"positive\" in i and any([c in i for c in case_config['TEST_PATTERNS']])]\n",
+    "test_neg_list = [i+'.x.npy' for i in FILES if \"negative\" in i and any([c in i for c in case_config['TEST_PATTERNS']])]\n"
    ]
   },
   {
@@ -67,10 +68,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/0', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/1', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/2', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/3', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/4']\n",
-      "['/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/0', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/1', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/2', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/3', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/4']\n",
+      "['/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/0.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/1.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/2.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/3.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/positive/4.x.npy']\n",
+      "['/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/0.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/1.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/2.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/3.x.npy', '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0002/negative/4.x.npy']\n",
       "21068\n",
-      "21543\n"
+      "21543\n",
+      "0\n",
+      "0\n",
+      "3000\n",
+      "3006\n"
      ]
     }
    ],
@@ -79,7 +84,13 @@
     "print(train_neg_list[:5])\n",
     "\n",
     "print(len(train_pos_list))\n",
-    "print(len(train_neg_list))"
+    "print(len(train_neg_list))\n",
+    "\n",
+    "print(len(val_pos_list))\n",
+    "print(len(val_neg_list))\n",
+    "\n",
+    "print(len(test_pos_list))\n",
+    "print(len(test_neg_list))"
    ]
   },
   {
@@ -91,64 +102,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:27<00:00, 107.97it/s]\n"
+      "  0%|          | 0/3000 [00:00<?, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3000, 128, 128)\n",
-      "(3000, 128, 128)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0172/positive/243'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-9121c83f987d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdata\u001b[0m      \u001b[0;34m=\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pos_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_neg_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_pos_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_neg_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/vessel_tracking/ml/modules/data.py\u001b[0m in \u001b[0;36mget_data\u001b[0;34m(pos_list, neg_list, N)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mneg_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'negative_files'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'X_positive'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'X_negative'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneg_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    370\u001b[0m     \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    371\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbasestring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 372\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    373\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mis_pathlib_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/media/marsdenlab/Data2/datasets/vessel_tracking/OSMSC0172/positive/243'"
      ]
     }
    ],
    "source": [
     "N = 3000\n",
     "\n",
-    "data = {}\n",
-    "data['positive_files'] = [random.choice(train_pos_list) for i in range(N)]\n",
-    "data['negative_files'] = [random.choice(train_neg_list) for i in range(N)]\n",
-    "data['X_train_positive'] = []\n",
-    "data['X_train_negative'] = []\n",
+    "data      = get_data(train_pos_list, train_neg_list, N)\n",
+    "test_data = get_data(test_pos_list, test_neg_list, N) \n",
     "\n",
-    "for i in tqdm(range(N)):\n",
-    "    pos_fn = data['positive_files'][i]+'.x.npy'\n",
-    "    neg_fn = data['negative_files'][i]+'.x.npy'\n",
-    "    \n",
-    "    data['X_train_positive'].append(np.load(pos_fn))\n",
-    "    data['X_train_negative'].append(np.load(neg_fn))\n",
-    "    \n",
-    "data['X_train_positive'] = np.array(data['X_train_positive'])\n",
-    "data['Y_train_positive'] = np.ones((N))\n",
-    "data['X_train_negative'] = np.array(data['X_train_negative'])\n",
-    "data['Y_train_negative'] = np.zeros((N))\n",
+    "print(data['X'].shape)\n",
+    "print(data['Y'].shape)\n",
     "\n",
-    "print(data['X_train_positive'].shape)\n",
-    "print(data['X_train_negative'].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6000, 16384)\n",
-      "(6000,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "data['X_train'] = np.concatenate((data['X_train_positive'], data['X_train_negative']),axis=0)\n",
-    "data['X_train'] = data['X_train'].reshape((data['X_train'].shape[0], int(data['X_train'].shape[1]**2)))\n",
-    "data['Y_train'] = np.concatenate((data['Y_train_positive'], data['Y_train_negative']),axis=0)\n",
-    "\n",
-    "print(data['X_train'].shape)\n",
-    "print(data['Y_train'].shape)"
+    "print(test_data['X'].shape)\n",
+    "print(test_data['Y'].shape)"
    ]
   },
   {
@@ -184,7 +165,7 @@
     "\n",
     "model = SGDClassifier(loss=\"log\")\n",
     "\n",
-    "model.fit(data['X_train'], data['Y_train'])"
+    "model.fit(data['X'], data['Y'])"
    ]
   },
   {
